Add basic html and fonts
Html is hard coded. Will be removed later for handling in js.
This was added to setup styling.

--- a/src/template.html
+++ b/src/template.html
@@ -2,18 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Wandering Emporium</title>
+    <title>Infernal Rapture</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <div class="title">
+                <h1>The Infernal Rapture</h1>
+            </div>
+
+            <div class="buttons">
+                <button id="home-btn">Home</button>
+                <button id="menu-btn">Menu</button>
+                <button id="about-btn">About</button>
+            </div>
         </nav>
     </header>
     <div id="content">
-
+        <h2>Welcome</h2>
+        <p>Lost souls are free to enjoy our meals for a single soul coin.</p>
+        <img src="./images/Mahadi.webp" alt="Mahadi the rakshasa">
+        <p>Come find us at any place in avernus</p>
     </div>
 </body>
 </html>
